# ymir

./: .gitignore  .info.json  .travis.yml  .ymir.columns  CMakeLists.txt  README.md  compute.py  generate.py  index.html  inference.py  params.json  pyymir.py  reformat.py  sitemap.xml  ybenchmark.py  yconvert.py  ytest.py
Ymir/: Graph  Inference  Model  Pattern
about/: index.html
algorithms/: index.html
api/: aligner_8h_source.html  aligner__parameters_8h_source.html  alignment_8h_source.html  alignment__matrix_8h_source.html  alignment__vector__base_8h_source.html  annotated.html  class_block_e_m_algorithm.html  class_event_ind_matrix_chain.html  class_json_1_1_exception-members.html  class_json_1_1_exception.html  class_json_1_1_logic_error-members.html  class_json_1_1_logic_error.html  class_json_1_1_our_char_reader-members.html  class_json_1_1_our_char_reader.html  class_json_1_1_our_features-members.html  class_json_1_1_our_features.html  class_json_1_1_our_reader-members.html  class_json_1_1_our_reader.html  class_json_1_1_runtime_error-members.html  class_json_1_1_runtime_error.html  class_num_errors_m_m_c.html  class_prob_matrix_chain.html  classes.html  classymir_1_1_abstract_insertion_model-members.html  classymir_1_1_abstract_insertion_model.html  classymir_1_1_alignment_matrix_base.html  classymir_1_1_cloneset-members.html  classymir_1_1_cloneset.html  classymir_1_1_cloneset_view-members.html  classymir_1_1_cloneset_view.html  classymir_1_1_clonotype_assembler-members.html  classymir_1_1_clonotype_assembler.html  classymir_1_1_clonotype_builder-members.html  classymir_1_1_clonotype_builder.html  classymir_1_1_codon_table.html  classymir_1_1_di_nuc_insertion_model-members.html  classymir_1_1_di_nuc_insertion_model.html  classymir_1_1_e_m_algorithm-members.html  classymir_1_1_e_m_algorithm.html  classymir_1_1_forward_backward_algorithm-members.html  (+164 more)
api-doc/: doxyfile.in
benchmark/: CMakeLists.txt  bench_inference.cpp  benchmark.cpp  benchutils.h  loganalysis.R
converters/: default.py  mixcr.json  vdjtools.json
doxygen/: doxyfile.in
general-doc/: mkdocs.yml
mainpage/: index.html
mkdocs/: mkdocs.yml
parsers/: __init__.py  columns.py  default.py  mitcr.json  mitcrdots.json
rpackage/: index.html
scripts/: CMakeLists.txt  compute.cpp  generate.cpp  inference.cpp
src/: aligner.h  assemblingstatisticalmodel.h  assemblygraph.h  assemblygraphbuilder.h  clone.h  clonotype.h  clonotypeassembler.h  (+23 more)
test/: CMakeLists.txt  test.cpp  test_aligner.cpp  test_alignment_clone.cpp  test_io.cpp  test_maag.cpp  test_markov_chain.cpp  test_model.cpp  test_paramvec_genes.cpp  testutils.h
test/data/: dgene.txt  dgene_towrite.txt  jgene.txt  jgene_towrite.txt  mitcr.alpha.txt  mitcr.beta.txt  vgene.txt  vgene_towrite.txt  ymir.alpha2.txt  ymir.beta.txt
test/data/test_vdj_model/: dsegments.txt  model.json  p.d.del.txt  p.ins.len.txt  p.ins.nucl.txt  p.j.del.txt  p.jd.txt  p.v.del.txt  p.v.txt  vsegments.txt
test/data/test_vj_model/: model.json  p.ins.len.txt  p.ins.nucl.txt  p.vj.txt
(+139 files in other folders)
